--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,19 @@
 
-.about img {
-    height: 250px;
-    float: left;
-    padding: 10px;
+.flex-container {
+    display: flex;
 }
 
-.about p {
-    display: inline;
+.flex-child-1 {
+    flex: 1;
+}  
+
+.flex-child-2{
+    margin-right: 20px;
+    padding: 20px;
+} 
+
+.about img {
+    height: 200px;
 }
 
 /* styling project images to fit in cards */
