--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,79 @@
+* {
+    box-sizing: border-box;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
+/* about section using flexbox */
 .flex-container {
     display: flex;
 }
 
 .flex-child-1 {
     flex: 1;
-}  
+}
 
-.flex-child-2{
+.flex-child-2 {
     margin-right: 20px;
     padding: 20px;
-} 
+}
 
 .about img {
     height: 200px;
+    border-radius: 50%;
+    border: 10px solid #FFA500;
+}
+
+/* Skills section */
+
+.button1 {
+    background-color: black;
+    border: 5px solid white;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.bouncy {
+    animation: bouncy 5s infinite linear;
+    position: relative;
+}
+
+@keyframes bouncy {
+    0% {
+        top: 0em
+    }
+
+    40% {
+        top: 0em
+    }
+
+    43% {
+        top: -0.9em
+    }
+
+    46% {
+        top: 0em
+    }
+
+    48% {
+        top: -0.4em
+    }
+
+    50% {
+        top: 0em
+    }
+
+    100% {
+        top: 0em
+    }
+}
+
+
+.card {
+    margin: 20px;
 }
 
 /* styling project images to fit in cards */
@@ -22,3 +82,14 @@
     height: 20vw;
     object-fit: cover;
 }
+
+.button {
+    background-color: red;
+}
+
+.button:hover {
+    background-color:
+        color:
+}
+
+/*  skills section */
