--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,14 @@
 * {
     box-sizing: border-box;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
+}
+
+/* Jumbotron */
+
+.jumbotron {
+    background-image: url("../images/glastonbury2.png");
+    background-size: cover;
+    height: 500px;
 }
 
 /* about section using flexbox */
@@ -18,9 +26,11 @@
 }
 
 .about img {
-    height: 200px;
-    border-radius: 50%;
-    border: 10px solid #FFA500;
+    height: 300px;
+}
+
+h1 {
+    font-weight: bold !important;
 }
 
 /* Skills section */
@@ -36,10 +46,11 @@
     font-size: 16px;
 }
 
-.bouncy {
+.bouncyß {
     animation: bouncy 5s infinite linear;
     position: relative;
 }
+
 
 @keyframes bouncy {
     0% {
@@ -74,6 +85,7 @@
 
 .card {
     margin: 20px;
+    background-color: #FFE5B4;
 }
 
 /* styling project images to fit in cards */
@@ -83,13 +95,13 @@
     object-fit: cover;
 }
 
-.button {
-    background-color: red;
+.btn {
+    background-color: #0096FF;
 }
 
-.button:hover {
-    background-color:
-        color:
+.btn:hover {
+    background-color: blue;
+    color: white;
 }
 
 /*  skills section */
