--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,66 +33,53 @@ h1 {
     font-weight: bold !important;
 }
 
+h2 {
+    font-weight: bold !important;
+}
+
+h5 {
+    font-weight: bold !important;
+}
+
 /* Skills section */
 
 .button1 {
-    background-color: black;
-    border: 5px solid white;
-    color: white;
-    padding: 15px 32px;
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+    padding: 10px 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    border-radius: 25px;
 }
 
-.bouncyß {
-    animation: bouncy 5s infinite linear;
-    position: relative;
+.expand {
+    transition: all .2s ease-in-out;
 }
-
-
-@keyframes bouncy {
-    0% {
-        top: 0em
+.expand:hover { 
+    transform: scale(1.1); 
+    text-decoration: none !important;
     }
-
-    40% {
-        top: 0em
-    }
-
-    43% {
-        top: -0.9em
-    }
-
-    46% {
-        top: 0em
-    }
-
-    48% {
-        top: -0.4em
-    }
-
-    50% {
-        top: 0em
-    }
-
-    100% {
-        top: 0em
-    }
-}
 
 
 .card {
     margin: 20px;
-    background-color: #FFE5B4;
+    background-color: #ADD8E6;
 }
 
 /* styling project images to fit in cards */
 .card-img-top {
     width: 100%;
-    height: 20vw;
+    height: 15vw;
     object-fit: cover;
+}
+
+video {
+    width: 350px;
+    display: block;
+    margin: 0 auto;
 }
 
 .btn {
