--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,105 +1,157 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  background-color: #fbf9fa;
+}
+
+:root {
+  --green-colour: #014421;
+  --white: #ffffff;
+}
+
+/* Navbar */
+
+li a {
+  color: #014421;
 }
 
 /* Jumbotron */
 
 .jumbotron {
-    background-image: url("../images/glastonbury2.png");
-    background-size: cover;
-    height: 500px;
+  background-image: url("../images/glastonbury2.png");
+  background-size: cover;
+  height: 500px;
 }
 
 /* about section using flexbox */
 .flex-container {
-    display: flex;
+  display: flex;
 }
 
 .flex-child-1 {
-    flex: 1;
+  flex: 1;
 }
 
 .flex-child-2 {
-    margin-right: 20px;
-    padding: 20px;
+  margin-right: 20px;
+  padding: 20px;
 }
 
 .about img {
-    height: 300px;
+  height: 300px;
 }
 
-h1 {
-    font-weight: bold !important;
+.intro {
+  background-color: transparent;
+  color: var(--green-colour);
+}
+
+.intro h1 {
+  background-color: transparent;
+  color: var(--green-colour);
+  font-family: "Gloock", serif;
+}
+
+.intro p {
+  background-color: transparent;
+  color: var(--green-colour);
 }
 
 h2 {
-    font-weight: bold !important;
+  font-weight: bold !important;
+  color: var(--green-colour);
 }
 
 h5 {
-    font-weight: bold !important;
+  font-weight: bold !important;
 }
 
 #gif {
-    height: 200px;
-    width: auto;
+  height: 300px;
+  width: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 /* Skills section */
 
 .button1 {
-    background-color: white;
-    border: 1px solid black;
-    color: black;
-    padding: 10px 30px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 25px;
+  background-color: var(--white);
+  border: 1px solid black;
+  color: black;
+  padding: 10px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 25px;
 }
 
 .expand {
-    transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
-.expand:hover { 
-    transform: scale(1.1); 
-    text-decoration: none !important;
-    }
-
+.expand:hover {
+  transform: scale(1.1);
+  text-decoration: none !important;
+  background-color: #014421;
+  color: var(--white);
+}
 
 .card {
-    margin: 20px;
-    background-color: #ADD8E6;
-    height: 90%; 
+  margin: 20px;
+  height: 100%;
+  margin: 20px;
 }
 
 /* styling project images to fit in cards */
-.card-img-top {
-    width: 100%;
-    height: 15vw;
-    object-fit: cover;
+
+.secondary {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
 }
 
 .img-fluid {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 video {
-    width: 350px;
-    display: block;
-    margin: 0 auto;
+  width: 350px;
+  display: block;
+  margin: 0 auto;
 }
 
 .btn {
-    background-color: #0096FF;
+  background-color: #009e60;
+  color: var(--white);
 }
 
 .btn:hover {
-    background-color: blue;
-    color: white;
+  background-color: var(--green-colour);
+  color: var(--white);
 }
 
 /*  skills section */
+
+
+/* website responsiveness */
+
+@media only screen and (max-width: 600px) {
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+      }
+      
+      .flex-child-1 {
+        flex: 1;
+        text-align: center;
+      }
+      
+      .flex-child-2 {
+        margin-right: 20px;
+        padding: 20px;
+      }
+}
